expected/main/gens/primRelaxIx-neg-32.err
ERROR: "actual/main/gens/primRelaxIx-neg-32.lc", line 3
external relax0_4   {primRelaxIx  0  4} :: Ix 0  -> Ix 4
         ^
No generated implementation: 0 is not a valid index limit; should be between 1 and 2147483647

ERROR: "actual/main/gens/primRelaxIx-neg-32.lc", line 4
external relax0_0   {primRelaxIx  0  0} :: Ix 0  -> Ix 0
         ^
No generated implementation: 0 is not a valid index limit; should be between 1 and 2147483647

ERROR: "actual/main/gens/primRelaxIx-neg-32.lc", line 5
external relax2G_2G {primRelaxIx 2G 2G} :: Ix 2G -> Ix 2G
         ^
No generated implementation: 2147483648 is not a valid index limit; should be between 1 and 2147483647

ERROR: "actual/main/gens/primRelaxIx-neg-32.lc", line 6
external relax2_1   {primRelaxIx  2  1} :: Ix 2  -> Ix 1
         ^
No generated implementation: first parameter must not be larger than the second

ERROR: "actual/main/gens/primRelaxIx-neg-32.lc", line 7
external relax7_3   {primRelaxIx  7  3} :: Ix 7  -> Ix 3
         ^
No generated implementation: first parameter must not be larger than the second

ERROR: "actual/main/gens/primRelaxIx-neg-32.lc", line 8
external relax1K_72 {primRelaxIx 1K 72} :: Ix 1K -> Ix 72
         ^
No generated implementation: first parameter must not be larger than the second

ERROR: "actual/main/gens/primRelaxIx-neg-32.lc", line 9
external relax1G_1K {primRelaxIx 1G 1K} :: Ix 1G -> Ix 1K
         ^
No generated implementation: first parameter must not be larger than the second

ERROR: Aborting after 7 previously reported errors

